--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "events": "^3.3.0",
     "filesystem": "^1.0.1",
     "http": "^0.0.1-security",
     "stream": "^0.0.2"
